--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -104,10 +104,10 @@
     top: 0vh;
   }
   100% {
-    top: -54vh;
+    top: -58vh;
     z-index: 3;
     background-color: white;
-    border-radius:10vw;
+    /*border-radius:10vw;*/
   }
 }
 
