--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -100,6 +100,8 @@ body {
   }
 }
 
+
+
 .band-banner {
   max-height: 15vh;
   max-width: 75vw;
@@ -438,13 +440,13 @@ body {
         }
       }
 
-      &:nth-child(3) {
+      &:nth-child(4) {
         & i {
           color: rgb(0, 204, 34);
         }
       }
 
-      &:nth-child(4) {
+      &:nth-child(5) {
         & i {
           background-image: linear-gradient(
             -45deg,
@@ -461,13 +463,13 @@ body {
         }
       }
 
-      &:nth-child(5) {
+      &:nth-child(6) {
         & i {
           color: rgb(49, 70, 255);
         }
       }
 
-      &:nth-child(6) {
+      &:nth-child(7) {
         & i {
           background: linear-gradient(
             270deg,
@@ -482,13 +484,13 @@ body {
         }
       }
 
-      &:nth-child(7) {
+      &:nth-child(8) {
         & i {
           color: rgb(255, 2, 2);
         }
       }
 
-      &:nth-child(8) {
+      &:nth-child(9) {
         & i {
           background: linear-gradient(
             180deg,
@@ -521,6 +523,44 @@ body {
       background-color: rgba(255, 129, 25, 0.849);
       padding: 1% 1%;
       box-shadow: 0 0 1vw black;
+    }
+  }
+}
+
+.buy-link {
+  width: 90%;
+  display: flex;
+  flex-direction:row;
+  background-color:black;
+  padding:0;
+  margin-left: 0%;
+  align-items:center;
+  overflow:visible;
+  padding:3%;
+  margin: 0 auto;
+  & > * {
+    width: 25%;
+    font-size: 4vh;
+    overflow:visible;
+   
+  }
+  & p {
+    font-size: 2vh;
+    text-align:center;
+    width:100%;
+    background:none;
+    background-color: rgb(255, 158, 13);
+
+}
+
+  
+  & > a {
+    width: 40%;
+    font-size: 4vh;
+    overflow:visible;
+    & i {
+      color:rgb(20, 161, 255);
+      background-color: none;
     }
   }
 }
